--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,16 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: "Open Sans";
 }
 
 html, body{
     height: 100%;
+}
+
+@font-face{
+    src: url('../fonts/OpenSans-Light.ttf');
+    font-family: "Open Sans";
 }
 
 .center{
@@ -37,8 +43,60 @@ html, body{
 }
 
 .form{
+    padding: 30px;
     width: 400px;
-    height: 100%;
+    height: calc(100% + 30px);
     display: inline-block;
+    position: relative;
+    top: -15px;
+    border: 8px solid #CCCCCC;
     background-color: white;
+    text-align: justify;
+}
+
+.form h2 {
+    font-weight: normal;
+    color: #999999;
+    font-size: 20px;
+    text-align: center;
+}
+
+.input-container{
+    margin-top: 20px;
+}
+
+.input-container span, .form p{
+    display: inline-block;
+    width: 100%;
+    color: #BBBBBB;
+    font-size: 17px;
+
+}
+
+.form p{
+    margin: 10px 0;
+}
+
+
+.input-container input[type="text"]{
+    margin-top: 8px;
+    width: 100%;
+    height: 55px;
+    border: 1px solid #ccc;
+}
+
+.input-container input[type="submit"]{
+    border-bottom: 5px solid #4A5097;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    width: 100%;
+    color: white;
+    height: 56px;
+    background-color: #363A6D;
+    cursor: pointer;
+}
+
+.form input[type="submit"]:hover{
+    background-color: #323665;
 }
