--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,18 @@ html, body{
     font-family: "Open Sans";
 }
 
+.clear{
+    clear: both;
+}
+
 .center{
-    width: 1280px;
+    width: 1200px;
     margin: 0 auto;
+    padding: 0 2%;
 }
 
 .header{
+    min-width: 1200px;
     width: 100%;
     height: 60px;
     background-color: #212343;
@@ -30,6 +36,7 @@ html, body{
 }
 
 .container-banner{
+    min-width: 1200px;
     width: 100%;
     height: 557px;
     background-image: url('../images/header_bg.png');
@@ -49,8 +56,11 @@ html, body{
     display: inline-block;
     position: relative;
     top: -15px;
-    border: 8px solid #CCCCCC;
+    border-width: 12px;
+    border-color: rgba(120, 120, 120, 0.5);
+    border-style: solid;
     background-color: white;
+    background-clip: padding-box;
     text-align: justify;
 }
 
@@ -95,8 +105,103 @@ html, body{
     height: 56px;
     background-color: #363A6D;
     cursor: pointer;
+    font-size: 100%;
 }
 
 .form input[type="submit"]:hover{
     background-color: #323665;
+}
+
+.container-list{
+    padding: 30px;
+    float: left;
+    width: 620px;
+    height: 270px;
+    background-color: rgba(33, 35, 67, 0.7);
+    margin-top: 40px;
+}
+
+.container-list ul{
+    list-style-position: inside;
+    text-align: start;
+}
+
+.container-list li{
+    margin-top: 18px;
+    color: white;
+}
+
+.container-2 {
+    min-width: 1200px;
+    padding: 40px 0;
+    background-color: #DDDDDD;
+    text-align: center;
+}
+
+.container-2 h2{
+    font-weight: normal;
+}
+
+.container-2 p{
+    width: 698px;
+    display: inline-block;
+    text-align: justify;
+    margin: 15px 0;
+}
+
+.arrow{
+    position: relative;
+    left: 50%;
+    margin-left: -32px;
+    top: 64px;
+    width: 64px;
+    height: 64px;
+    background-image: url('../images/arrow.png');
+    background-size: 100% 100%;
+}
+.section-1{
+    min-width: 1200px;
+    padding: 90px 0;
+}
+
+.section-1 h2{
+    text-align: center;
+    color: #462663;
+    font-weight: normal;
+}
+
+.container-section{
+    margin-top: 40px;
+}
+
+.container-section{
+    text-align: center;
+}
+
+.container-single{
+    float: left;
+    width: 33.33%;
+    padding: 30px;
+}
+
+.container-single p{
+    text-align: justify;
+    display: inline-block;
+    padding: 10px 25px;
+}
+
+.container-single img{
+    width: 70px;
+}
+
+.footer{
+    clear: both;
+    border-top: 2px solid #888888;
+    padding: 20px 0;
+    text-align: center;
+    color: #888;
+}
+
+.footer p{
+    margin-top: 8px;
 }
