--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html, body{
 }
 
 .form{
-    padding: 30px;
+    padding: 20px;
     width: 400px;
     height: calc(100% + 30px);
     float: right;
@@ -74,6 +74,7 @@ html, body{
     margin-top: 20px;
 }
 
+
 .input-container span, .form p{
     display: inline-block;
     width: 100%;
@@ -86,11 +87,15 @@ html, body{
     margin: 10px 0;
 }
 
+.input-container input[type=text]:focus{
+    outline: 0;
+}
 
 .input-container input[type="text"]{
     margin-top: 8px;
     width: 100%;
     height: 55px;
+    padding: 8px 10px 8px 10px;
     border: 1px solid #ccc;
 }
 
